# mpp-near

./: .env.example  .gitignore  AGENT_CLIENT.md  CLI.md  Cargo.toml  FIXES.md  GIT_STATUS.md  INTEGRATION_COMPLETE.md  README.md  SKILL.md  TEST_REPORT.md  check_push.sh  test_examples.sh
docs/: CROSS_CHAIN_PAYMENTS.md  CROSS_CHAIN_QUICKSTART.md  README.md  bun.lockb  package-lock.json  package.json  receipt.md  tailwind.config.js
docs/app/: globals.css  layout.tsx  page.tsx
docs/app/docs/: layout.tsx  page.tsx
docs/app/docs/api/overview/: page.tsx
docs/app/docs/cli/overview/: page.tsx
docs/app/docs/faq/: page.tsx
docs/app/docs/installation/: page.tsx
docs/app/docs/outlayer/: page.tsx
docs/app/docs/quickstart/: page.tsx
docs/app/skill/: page.tsx
docs/components/: APISection.tsx  CLISection.tsx  CodeExample.tsx  Comparison.tsx  Features.tsx  Footer.tsx  Header.tsx  Hero.tsx  HowItWorks.tsx  MermaidComponent.tsx  PixelArtLogo.tsx  WhatIsMPP.tsx  WhyUseIt.tsx
docs/docs/: challenge.md  credential.md  hmac-binding.md  index.md  problem.md  quick-start.md
examples/: MPP_README.md  README.md  SUMMARY.md  TESTING_GUIDE.md  api-server.js  basic-server.rs  cross_chain_client.rs  end_to_end_test.rs  full_client.rs  full_server.rs  intents_client.rs  mpp-near-client.js  mpp-near-server.js  near-intents-server.rs  near_client.rs  near_server.rs  test-api.sh  test-mpp.sh  test_payment_client.rs
mpp-near-ironclaw/: Cargo.toml
mpp-near-ironclaw/src/: lib.rs
mpp-near-outlayer/: Cargo.toml
mpp-near-outlayer/src/: main.rs  mpp.rs  rpc.rs  swap.rs  tokens.rs  wallet.rs
src/: lib.rs  middleware.rs  near_intents.rs
src/bridge/: client.rs  mod.rs  server.rs  types.rs
src/client/: agent_client.rs  intents.rs  middleware.rs  mod.rs  provider.rs  signer.rs
src/primitives/: challenge.rs  credential.rs  digest.rs  headers.rs  method.rs  mod.rs  problem.rs  receipt.rs  verify.rs
src/server/: extractor.rs  mod.rs  verifier.rs
src/types/: mod.rs
tests/: integration.rs  integration_tests.rs
