[package]
name = "mpp-near"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "NEAR payment provider for Machine Payments Protocol (MPP)"
repository = "https://github.com/Kampouse/mpp-near"
readme = "README.md"

[features]
default = ["client", "server", "near-intents"]
client = ["reqwest", "reqwest-middleware"]
server = ["axum", "tower", "tower-http"]
near-intents = ["reqwest"]
intents = ["near-intents"]  # Alias

[dependencies]
# Core
async-trait = "0.1"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
http = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Crypto
ed25519-dalek = "2.0"
rand = "0.8"
sha2 = "0.10"
hmac = "0.12"

# HTTP
reqwest = { version = "0.12", optional = true, features = ["json"] }
reqwest-middleware = { version = "0.3", optional = true }

# Server
axum = { version = "0.7", optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", optional = true }

# NEAR (no near-sdk - we're off-chain)
near-crypto = "0.26"
near-jsonrpc-client = "0.13"
near-primitives = "0.26"

# Utils
hex = "0.4"
base64 = "0.22"
url = "2.5"
uuid = { version = "1.0", features = ["v4"] }
bs58 = "0.5"
anyhow = "1.0"

# CLI dependencies
clap = { version = "4.5", features = ["derive"] }
toml = "0.8"
directories = "5.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
colored = "2.1"
urlencoding = "2.1"

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6"

[[bin]]
name = "mpp-near"
path = "src/bin/mpp-near.rs"
required-features = ["client"]

[[bin]]
name = "generate-keys"
path = "src/bin/generate_keys.rs"

[[example]]
name = "near_client"
required-features = ["client"]

[[example]]
name = "near_server"
required-features = ["server"]

[[example]]
name = "intents_client"
required-features = ["client", "intents"]
