[package]
name = "mpp-near-outlayer"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["alloc", "serde"] }
wasi-http-client = { version = "0.2", features = ["json"] }
